# SDL_minizip

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  SDL_minizip.h
.cmake/: FindSDL3.cmake  Findminizipng.cmake  SDL_minizipConfig.cmake.in
.github/workflows/: test.yml
test/: SDL_minizip_test.c
